updates of noteboks

--- a/doc/conventions/conventions.ipynb
+++ b/doc/conventions/conventions.ipynb
@@ -17,7 +17,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from h5rdmtoolbox.conventions import standard_names"
+    "from h5rdmtoolbox.conventions import StandardizedNameTable"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74c72248-2b69-48f6-b556-4d1b25349752",
+   "metadata": {},
+   "source": [
+    "Whenever a dataset is written and the parameter \"standard_name\" is set, it is verified against the standard name convention/table associated with the wrapper class. If the constant `STRICT` is set to True (default), the name is looked-up in the table and, if not found, the dataset cannot be written. To allow standard names, that fullfil the spelling requirements but are not yet listed in the table, set `STRICT` to False:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52a96fd3-318c-4e0a-8c57-82cfcb170480",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from h5rdmtoolbox import conventions\n",
+    "conventions.identifier.STRICT = False"
    ]
   },
   {
@@ -36,7 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sc = standard_names.StandardNameConvention(standard_name_dict={}, name='Test_SNC', version=1, contact='contact@python.com', institution='my_institution')\n",
+    "sc = StandardizedNameTable(name='Test_SNC', table_dict={}, version_number=1, contact='contact@python.com', institution='my_institution')\n",
     "sc"
    ]
   },
@@ -107,7 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sc_test = standard_names.StandardNameConvention.from_xml(xml_filename)\n",
+    "sc_test = StandardizedNameTable.from_xml(xml_filename)\n",
     "sc_test"
    ]
   },
@@ -127,7 +146,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from h5rdmtoolbox.conventions.standard_names import FluidConvention"
+    "from h5rdmtoolbox.conventions.custom import FluidStandardNameTable"
    ]
   },
   {
@@ -137,7 +156,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "FluidConvention.dump(sort_by='name')"
+    "FluidStandardNameTable.dump(sort_by='name')"
    ]
   },
   {
@@ -147,7 +166,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from h5rdmtoolbox.conventions.standard_names import PIVConvention"
+    "from h5rdmtoolbox.conventions.custom import PIVStandardNameTable"
    ]
   },
   {
@@ -157,7 +176,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "PIVConvention.dump(sort_by='name')"
+    "PIVStandardNameTable.dump(sort_by='name')"
    ]
   },
   {
