--- a/doc/h5wrapper/H5PIVuncertainty.ipynb
+++ b/doc/h5wrapper/H5PIVuncertainty.ipynb
@@ -194,6 +194,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8d109482-2fad-4a47-8c55-d3e3a552d18b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from h5rdmtoolbox import conventions\n",
+    "conventions.identifier.STRICT = False\n",
+    "# uncertainty_of_x_displacement is not part of the standard name table at this moment. \n",
+    "# Don't check if standard names are in the respective table. this can be done by diabeling the \"strictness\" of checking standard names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "b497ab65-f926-41a0-bf68-0a0da31e55b5",
    "metadata": {},
    "outputs": [],
