--- a/doc/x2hdf/piv2hdf/snapshot.ipynb
+++ b/doc/x2hdf/piv2hdf/snapshot.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Snapshot to HDF\n",
-    "Converting single sanpshots is something, that you will rarely need, but is used by the algorithm when coverting planes or cases which is the standard usecase."
+    "Converting single sanpshots is something, that you will rarely need, but is used by the algorithm when coverting planes or cases (multi-planes) which is the standard usecase."
    ]
   },
   {
@@ -93,7 +93,6 @@
    "outputs": [],
    "source": [
     "with H5PIV(piv_snapshot.hdf_filename, 'r+') as h5piv:\n",
-    "    h5piv.dump()\n",
     "    u = h5piv.u[:]"
    ]
   },
