device is property of class not an accessor
A notebook describes how to use accessors

--- a/doc/h5wrapper/InheritanceAndAccessors.ipynb
+++ b/doc/h5wrapper/InheritanceAndAccessors.ipynb
@@ -12,24 +12,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "56805966-cb74-445f-9bf4-a93806899160",
    "metadata": {},
    "outputs": [],
    "source": [
     "from h5rdmtoolbox.h5wrapper.h5file import H5File, H5Group, H5Dataset\n",
-    "from h5rdmtoolbox.h5wrapper.h5base import H5BaseDataset, H5Base, H5BaseGroup\n",
     "import h5py"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "9141f325-37f5-4857-a831-d28694401785",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class MyDataset(H5BaseDataset):\n",
+    "class MyDataset(H5Dataset):\n",
     "    def __repr__(self):\n",
     "        return f'{self.name}\\n{self.attrs}'\n",
     "    \n",
@@ -49,12 +48,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "b8f2255a-2d41-47bc-9231-f5e8746e22a3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class MyGroup(H5BaseGroup):\n",
+    "class MyGroup(H5Group):\n",
     "    \n",
     "    def get_all_datasets(self):\n",
     "        \"\"\"returns all datasets of this group\"\"\"\n",
@@ -82,12 +81,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "25d3aa40-f303-46de-bd10-aef335b78427",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class MyWrapper(H5Base, MyGroup):\n",
+    "class MyWrapper(H5File, MyGroup):\n",
     "    \n",
     "    def set_user(self, user_name):\n",
     "        self.attrs.modify('user', user_name)"
@@ -103,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "e76a3499-b6d2-42f4-b56e-1f04537ef840",
    "metadata": {},
    "outputs": [],
@@ -117,46 +116,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "69af921f-03e8-4c8d-a08f-122472551ce6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\da4323\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp1\\tmp0.hdf\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "h5 = MyWrapper()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "b91e4b80-65f2-4f21-994e-c0edfed59608",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "__main__.MyWrapper"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "type(h5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "95bf3100-bb07-441a-a868-309b0ac9aef2",
    "metadata": {},
    "outputs": [],
@@ -166,28 +146,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "3ba35edf-01dd-4515-a391-60a7f74f745b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "__main__.MyGroup"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "type(g)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "352c04bd-febe-438f-aca3-07ced3e2eff7",
    "metadata": {},
    "outputs": [],
@@ -197,98 +166,146 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "84f79b60-7a7d-41cc-804d-b3aee800d55e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "__main__.MyGroup"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "type(gg)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "27815724-5671-4229-868e-5e5a82213012",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds = gg.create_dataset('hello', user='test user', shape=(2,3), overwrite=True)"
+    "ds = gg.create_dataset('hello', user='test user', shape=(2,3), units='', long_name='', overwrite=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "2e6f82e1-008d-41fe-b6a3-92d3ee29f6ee",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "/grp/grp/hello\n",
-       "user  test user"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ds"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "3bb4bdff-08a4-49d8-811b-a7b59f87960b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "__main__.MyDataset"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "type(ds)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f83c9df4-918c-4867-932c-2502e241f1e0",
+   "metadata": {},
+   "source": [
+    "## Accessors"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
+   "id": "7db61f68-d569-4419-b8cd-9f4985cf79b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from h5rdmtoolbox.h5wrapper.accessory import register_special_dataset, register_special_property"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "d81d0a38-b005-4703-aa62-f0b78f6665d8",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "h5.datasets"
+    "import xarray as xr\n",
+    "@register_special_dataset('user', H5Dataset)\n",
+    "class InfoProperty:\n",
+    "    \"\"\"Device Accessor class\"\"\"\n",
+    "\n",
+    "    def __init__(self, ds):\n",
+    "        self._ds = ds\n",
+    "        self._username = 'NoName'\n",
+    "\n",
+    "    @property\n",
+    "    def name(self):\n",
+    "        return self._username\n",
+    "    \n",
+    "    @name.setter\n",
+    "    def name(self, new_name):\n",
+    "        self._username = new_name"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c724a25f-6a82-4ead-b3f7-a0e7ea1f806c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with H5File() as h5:\n",
+    "    ds = h5.create_dataset('test', shape=(2,), units='', standard_name='')\n",
+    "    print(ds.user)\n",
+    "    print(ds.user.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25a7bb69-36f2-46c8-9a7c-ab722a1e6bb3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# register a property with setter and getter method:\n",
+    "@register_special_property(H5Dataset, overwrite=True)\n",
+    "class username:\n",
+    "    \"\"\"User Name Property\"\"\"\n",
+    "\n",
+    "    def get(self):\n",
+    "        \"\"\"geter method\"\"\"\n",
+    "        return self.attrs['user_name']\n",
+    "\n",
+    "    def set(self, user_name: str):\n",
+    "        self.attrs['user_name'] = user_name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ddd1be6-78b5-4913-88c3-04eac82e600c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with H5File() as h5:\n",
+    "    ds = h5.create_dataset('test', shape=(2,), units='', standard_name='')\n",
+    "    print(ds.user)\n",
+    "    print(ds.user.name)\n",
+    "    \n",
+    "    ds.attrs['user_name'] = 'First User'\n",
+    "    print(ds.username)\n",
+    "    ds.username = 'Second User'\n",
+    "    print(ds.username)\n",
+    "    h5.dump()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4e76b065-481b-4686-8740-b672259c974b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
