updte standard name naming convention

--- a/doc/h5wrapper/InheritanceAndAccessors.ipynb
+++ b/doc/h5wrapper/InheritanceAndAccessors.ipynb
@@ -255,7 +255,7 @@
    "outputs": [],
    "source": [
     "with H5File() as h5:\n",
-    "    ds = h5.create_dataset('test', shape=(2,), units='', standard_name='')\n",
+    "    ds = h5.create_dataset('test', shape=(2,), units='', standard_name='standard_test')\n",
     "    print(ds.user)\n",
     "    print(ds.user.name)"
    ]
@@ -288,7 +288,7 @@
    "outputs": [],
    "source": [
     "with H5File() as h5:\n",
-    "    ds = h5.create_dataset('test', shape=(2,), units='', standard_name='')\n",
+    "    ds = h5.create_dataset('test', shape=(2,), units='', standard_name='standard_test')\n",
     "    print(ds.user)\n",
     "    print(ds.user.name)\n",
     "    \n",
