--- a/doc/h5wrapper/InheritanceAndAccessors.ipynb
+++ b/doc/h5wrapper/InheritanceAndAccessors.ipynb
@@ -181,7 +181,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds = gg.create_dataset('hello', user='test user', shape=(2,3), units='', long_name='', overwrite=True)"
+    "ds = gg.create_dataset('hello', user='test user', shape=(2,3), units='', long_name='a long name', overwrite=True)"
    ]
   },
   {
