finalized import convenience

--- a/doc/conventions/conventions.ipynb
+++ b/doc/conventions/conventions.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from h5rdmtoolbox.conventions import StandardizedNameTable"
+    "import h5rdmtoolbox as h5tbx"
    ]
   },
   {
@@ -35,8 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from h5rdmtoolbox import conventions\n",
-    "conventions.identifier.STRICT = False"
+    "h5tbx.conventions.identifier.STRICT = False"
    ]
   },
   {
@@ -55,7 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sc = StandardizedNameTable(name='Test_SNC', table_dict={}, version_number=1, contact='contact@python.com', institution='my_institution')\n",
+    "sc = h5tbx.conventions.StandardizedNameTable(name='Test_SNC', table_dict={}, version_number=1, contact='contact@python.com', institution='my_institution')\n",
     "sc"
    ]
   },
@@ -106,8 +105,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from h5rdmtoolbox.utils import generate_temporary_filename\n",
-    "xml_filename = generate_temporary_filename(suffix='.xml')\n",
+    "xml_filename = h5tbx.generate_temporary_filename(suffix='.xml')\n",
     "sc.to_xml(xml_filename)"
    ]
   },
@@ -126,7 +124,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sc_test = StandardizedNameTable.from_xml(xml_filename)\n",
+    "sc_test = h5tbx.conventions.StandardizedNameTable.from_xml(xml_filename)\n",
     "sc_test"
    ]
   },
@@ -142,31 +140,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f4d0736-d79c-40cd-a14b-d879f493dc07",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from h5rdmtoolbox.conventions.custom import FluidStandardNameTable"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "77408a34-933a-4dd7-aea5-460d2af5efa0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "FluidStandardNameTable.dump(sort_by='name')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3792e95f-c5f6-491b-b1dd-d8e60877739b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from h5rdmtoolbox.conventions.custom import PIVStandardNameTable"
+    "h5tbx.conventions.FluidStandardNameTable.dump(sort_by='name')"
    ]
   },
   {
@@ -176,7 +154,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "PIVStandardNameTable.dump(sort_by='name')"
+    "h5tbx.conventions.PIVStandardNameTable.dump(sort_by='name')"
    ]
   },
   {
