--- a/doc/h5wrapper/InheritanceAndAccessors.ipynb
+++ b/doc/h5wrapper/InheritanceAndAccessors.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from h5rdmtoolbox.h5wrapper.h5file import H5File, H5Group, H5Dataset\n",
+    "import h5rdmtoolbox as h5tbx\n",
     "import h5py"
    ]
   },
@@ -28,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class MyDataset(H5Dataset):\n",
+    "class MyDataset(h5tbx.h5wrapper.h5file.H5Dataset):\n",
     "    def __repr__(self):\n",
     "        return f'{self.name}\\n{self.attrs}'\n",
     "    \n",
@@ -53,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class MyGroup(H5Group):\n",
+    "class MyGroup(h5tbx.h5wrapper.h5file.H5Group):\n",
     "    \n",
     "    def get_all_datasets(self):\n",
     "        \"\"\"returns all datasets of this group\"\"\"\n",
@@ -86,7 +86,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class MyWrapper(H5File, MyGroup):\n",
+    "class MyWrapper(h5tbx.H5File, MyGroup):\n",
     "    \n",
     "    def set_user(self, user_name):\n",
     "        self.attrs.modify('user', user_name)"
@@ -230,7 +230,7 @@
    "outputs": [],
    "source": [
     "import xarray as xr\n",
-    "@register_special_dataset('user', H5Dataset)\n",
+    "@register_special_dataset('user', h5tbx.h5wrapper.h5file.H5Dataset)\n",
     "class InfoProperty:\n",
     "    \"\"\"Device Accessor class\"\"\"\n",
     "\n",
@@ -254,7 +254,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with H5File() as h5:\n",
+    "with h5tbx.H5File() as h5:\n",
     "    ds = h5.create_dataset('test', shape=(2,), units='', standard_name='standard_test')\n",
     "    print(ds.user)\n",
     "    print(ds.user.name)"
@@ -268,7 +268,7 @@
    "outputs": [],
    "source": [
     "# register a property with setter and getter method:\n",
-    "@register_special_property(H5Dataset, overwrite=True)\n",
+    "@register_special_property(h5tbx.h5wrapper.h5file.H5Dataset, overwrite=True)\n",
     "class username:\n",
     "    \"\"\"User Name Property\"\"\"\n",
     "\n",
@@ -287,7 +287,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with H5File() as h5:\n",
+    "with h5tbx.H5File() as h5:\n",
     "    ds = h5.create_dataset('test', shape=(2,), units='', standard_name='standard_test')\n",
     "    print(ds.user)\n",
     "    print(ds.user.name)\n",
@@ -303,6 +303,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4e76b065-481b-4686-8740-b672259c974b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8cec4c7-bdb4-484b-83f9-8e4019826c46",
    "metadata": {},
    "outputs": [],
    "source": []
