--- a/doc/x2hdf/piv2hdf/Introduction.ipynb
+++ b/doc/x2hdf/piv2hdf/Introduction.ipynb
@@ -28,10 +28,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "62005259-2585-405e-b454-7ca1f0d1267b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.1.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\da4323\\documents\\programming\\github\\h5rdmtoolbox\\h5rdmtoolbox\\h5wrapper\\h5piv.py:671: SpecialDatasetRegistrationWarning: registration of accessor <class 'h5rdmtoolbox.h5wrapper.h5piv.PIVDisplacementDataset'> under name 'DisplacementVector' for type <class 'h5rdmtoolbox.h5wrapper.h5piv.H5PIVGroup'> is overriding a preexisting attribute with the same name.\n",
+      "  class PIVDisplacementDataset(DisplacementDataset):\n"
+     ]
+    }
+   ],
    "source": [
     "from h5rdmtoolbox import x2hdf, __version__\n",
     "\n",
@@ -40,10 +56,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "6274a797-8eec-4822-b7a5-eba0590ee1d0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'interpolation': False,\n",
+       " 'apply_mask': True,\n",
+       " 'masking': 'slack',\n",
+       " 'time_unit': 's',\n",
+       " 'z_source': 'coord_min',\n",
+       " 'datetime_str': '%Y-%m-%dT%H:%M:%SZ%z',\n",
+       " 'attrs_unit_name': 'units',\n",
+       " 'compression': 'gzip',\n",
+       " 'compression_opts': 5,\n",
+       " 'take_min_nt': True,\n",
+       " 'standardized_name_table': PIV_Standard_Name (version number: None),\n",
+       " 'timeAverages': {'compute': True, 'use_nc': False},\n",
+       " 'post': {'compute': True,\n",
+       "  'grpname': 'post',\n",
+       "  'grpdesc': 'Post processing data',\n",
+       "  'running_mean': {'compute': True,\n",
+       "   'grpname': 'running_mean',\n",
+       "   'grpdesc': 'Running mean',\n",
+       "   'dataset_names': ['u', 'v']},\n",
+       "  'running_std': {'compute': True,\n",
+       "   'grpname': 'running_std',\n",
+       "   'grpdesc': 'Running standard deviation',\n",
+       "   'dataset_names': ['u', 'v']},\n",
+       "  'velocity_abs_ds_name': 'c',\n",
+       "  'compute_dwdz': False}}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x2hdf.piv2hdf.config"
    ]
