--- a/doc/x2hdf/piv2hdf/paraVIEW.ipynb
+++ b/doc/x2hdf/piv2hdf/paraVIEW.ipynb
@@ -17,11 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import xarray as xr\n",
-    "from h5rdmtoolbox import x2hdf\n",
-    "from h5rdmtoolbox import tutorial\n",
-    "from h5rdmtoolbox.x2hdf.piv2hdf.pivview import PIVMultiPlane\n",
-    "from h5rdmtoolbox.h5wrapper import H5PIV, H5File"
+    "from h5rdmtoolbox import x2hdf, tutorial, H5PIV"
    ]
   },
   {
@@ -32,7 +28,7 @@
    "outputs": [],
    "source": [
     "plane0_dir, plane1_dir, _ = tutorial.PIVview.get_multiplane_directories()\n",
-    "piv_case = PIVMultiPlane([plane0_dir, plane1_dir], time_information=[5, 5])\n",
+    "piv_case = x2hdf.PIVMultiPlane([plane0_dir, plane1_dir], time_information=[5, 5])\n",
     "piv_case.convert()"
    ]
   },
@@ -51,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with H5File(piv_case.hdf_filename, 'r') as h5piv:\n",
+    "with H5PIV(piv_case.hdf_filename, 'r') as h5piv:\n",
     "    # h5piv.dump()\n",
     "    datasets = []\n",
     "    nt = h5piv['time'].size\n",
@@ -74,6 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import xarray as xr\n",
     "for it in range(nt):\n",
     "    ds = xr.merge([ds[:,it,...].drop('time') for ds in datasets if ds.name not in ('x', 'y', 'z', 'time', 'ix', 'iy')])\n",
     "    ds['piv_flags'].attrs.pop('flag_translation')\n",
