--- a/doc/x2hdf/piv2hdf/plane.ipynb
+++ b/doc/x2hdf/piv2hdf/plane.ipynb
@@ -16,10 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from h5rdmtoolbox.x2hdf.piv2hdf.pivview.plane import PIVPlane\n",
-    "from h5rdmtoolbox import x2hdf\n",
-    "from h5rdmtoolbox import tutorial\n",
-    "from h5rdmtoolbox.h5wrapper import H5PIV"
+    "from h5rdmtoolbox import x2hdf, tutorial, H5PIV"
    ]
   },
   {
@@ -38,7 +35,7 @@
    "outputs": [],
    "source": [
     "plane_dir = tutorial.PIVview.get_plane_directory()\n",
-    "piv_plane = PIVPlane(plane_dir, time_information=5)  #  let's assume data was recorded with 5 Hz.\n",
+    "piv_plane = x2hdf.PIVPlane(plane_dir, time_information=5)  #  let's assume data was recorded with 5 Hz.\n",
     "piv_plane.convert()\n",
     "print(f'conversion time: {piv_plane.conversion_time}, generated file: {piv_plane.hdf_filename}')"
    ]
