--- a/doc/x2hdf/piv2hdf/snapshot.ipynb
+++ b/doc/x2hdf/piv2hdf/snapshot.ipynb
@@ -16,9 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from h5rdmtoolbox.x2hdf.piv2hdf.pivview.snapshot import PIVSnapshot\n",
-    "from h5rdmtoolbox import x2hdf\n",
-    "from h5rdmtoolbox import tutorial"
+    "import h5rdmtoolbox as h5tbx"
    ]
   },
   {
@@ -41,7 +39,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nc_file = tutorial.PIVview.get_snapshot_nc_files()[0]"
+    "nc_file = h5tbx.tutorial.PIVview.get_snapshot_nc_files()[0]"
    ]
   },
   {
@@ -61,7 +59,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "piv_snapshot = PIVSnapshot(nc_file, recording_time=0)\n",
+    "piv_snapshot = h5tbx.x2hdf.PIVSnapshot(nc_file, recording_time=0)\n",
     "_ = piv_snapshot.convert()\n",
     "print(f'conversion time: {piv_snapshot.conversion_time}, generated file: {piv_snapshot.hdf_filename.name}')"
    ]
