--- a/doc/x2hdf/piv2hdf/multiplane.ipynb
+++ b/doc/x2hdf/piv2hdf/multiplane.ipynb
@@ -15,10 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from h5rdmtoolbox.x2hdf.piv2hdf.pivview.plane import PIVMultiPlane\n",
-    "from h5rdmtoolbox import tutorial\n",
-    "from h5rdmtoolbox import x2hdf\n",
-    "from h5rdmtoolbox.h5wrapper import H5PIV"
+    "from h5rdmtoolbox import x2hdf, tutorial, H5PIV"
    ]
   },
   {
@@ -57,7 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "piv_mplane_uef = PIVMultiPlane([plane0_dir, plane1_dir], time_information=[5, 5.2])  # force different planes by passing different meas. freqs.\n",
+    "piv_mplane_uef = x2hdf.PIVMultiPlane([plane0_dir, plane1_dir], time_information=[5, 5.2])  # force different planes by passing different meas. freqs.\n",
     "piv_mplane_uef.convert()\n",
     "print(f'conversion time: {piv_mplane_uef.conversion_time}, generated file: {piv_mplane_uef.hdf_filename}')"
    ]
@@ -90,7 +87,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "piv_mplane_ef = PIVMultiPlane([plane0_dir, plane1_dir], time_information=[5, 5])\n",
+    "piv_mplane_ef = x2hdf.PIVMultiPlane([plane0_dir, plane1_dir], time_information=[5, 5])\n",
     "piv_mplane_ef.convert()\n",
     "print(f'conversion time: {piv_mplane_ef.conversion_time}, generated file: {piv_mplane_ef.hdf_filename}')"
    ]
