WIP updating docu

--- a/doc/h5wrapper/GettingStarted.ipynb
+++ b/doc/h5wrapper/GettingStarted.ipynb
@@ -8,12 +8,11 @@
    "source": [
     "# Getting started\n",
     "\n",
-    "The package `h5wrapper` provides wrapper-classes built upon and around the main classes of the `h5py` package. It acts like an interface between an HDF5 file and the user by supervising data writing and reading based on certain so-called conventions and layouts.\n",
+    "The package `h5wrapper` adds general and application/domain-specific functionalities to the core interface HDF5 implemented in the package `h5py` (https://docs.h5py.org/en/stable/). This is done by providing so-calle wrapper classes. They\n",
+    " - facilitate and streamline the work with HDF5 files and\n",
+    " - integrate meta-conventions and file-layout specifications.\n",
     "\n",
-    "There are multiple wrapper-classes implemented, each of which exteding functionality and introducing specific layout- and naming-convetions.\n",
-    "The basic wrapper-class is called `H5File`. We will first demonstrate the functionalities and concepts around it before the more specialize wrapper classes are shown.\n",
-    "\n",
-    "This notebook walks you through the fundamental concept using the basic wrapper calss `H5File` built around the `h5py.File` class. It extends `h5py.File`, `h5py.Dataset` and `h5px.Group` with some useful functionality motivated by sustainable datamanagement and onerous processing of data stored in an HDF5 file.\n",
+    "There are multiple wrapper-classes implemented, each of which exteding functionality and introducing specific layout- and naming-convetions. The basic wrapper-class is called `H5File`. We will first demonstrate the functionalities and concepts around it before the more specialize wrapper classes are shown.\n",
     "\n",
     "The wrapper classes extend but don't limit the funcitonality of the `h5py` package, so everything knwon from it is available also through this package. An HDF created, read or generally processed with `H5File` requires to respect certain conventions and prinicples. It is possible to ignore them but warnings will be raised. The following sections walk you through the concept and basic functionalities of the first warpper-class `H5File`:"
    ]
