--- a/doc/x2hdf/piv2hdf/multiplane.ipynb
+++ b/doc/x2hdf/piv2hdf/multiplane.ipynb
@@ -56,7 +56,10 @@
    "source": [
     "piv_mplane_uef = x2hdf.PIVMultiPlane([plane0_dir, plane1_dir], time_information=[5, 5.2])  # force different planes by passing different meas. freqs.\n",
     "piv_mplane_uef.convert()\n",
-    "print(f'conversion time: {piv_mplane_uef.conversion_time}, generated file: {piv_mplane_uef.hdf_filename}')"
+    "print(f'conversion time: {piv_mplane_uef.conversion_time}, generated file: {piv_mplane_uef.hdf_filename}')\n",
+    "for plane in piv_mplane_uef.planes:\n",
+    "    print(f'plane {plane.name.stem}: {plane.nc}')\n",
+    "print(f'hdf file size: {piv_mplane_uef.hdf_filename.stat().st_size} Bytes ({piv_mplane_uef.hdf_filename.stat().st_size/1000} KB)')"
    ]
   },
   {
