--- a/doc/h5wrapper/GettingStarted.ipynb
+++ b/doc/h5wrapper/GettingStarted.ipynb
@@ -30,7 +30,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Opening a file\n",
+    "## Create a HDF file\n",
+    "\n",
+    "There are several ways to open a file with this package."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h5 = h5tbx.H5File()\n",
+    "print(h5.hdf_filename.name)  # equal to h5.filename but a pathlib.Path and exists also after file is closed\n",
+    "h5.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A safer way to work with files is to use python's context manager. This is highly recommended and used throughout the hole documentation and package.\n",
+    "\n",
+    "Thus, the above cell changes to:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with h5tbx.H5File() as h5:\n",
+    "    print(h5.hdf_filename.name)  # equal to h5.filename but a pathlib.Path and exists also after file is closed"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Open a file\n",
     "... and displaying (dumping) the content). An interactive html representation of the file content is displayed. At the moment only attributes at the root level exist. They were created when the file was opened in write mode. While `creation_time` and `modification_time` are treated as regular attributes `__h5rdmtoolbox_version__` and `__wrcls__`, thus attribus starting and ending with `__` are special attributes reserved/used by the package."
    ]
   },
