--- a/doc/conventions/conventions.ipynb
+++ b/doc/conventions/conventions.ipynb
@@ -25,7 +25,7 @@
    "id": "74c72248-2b69-48f6-b556-4d1b25349752",
    "metadata": {},
    "source": [
-    "Whenever a dataset is written and the parameter \"standard_name\" is set, it is verified against the standard name convention/table associated with the wrapper class. If the constant `STRICT` is set to True (default), the name is looked-up in the table and, if not found, the dataset cannot be written. To allow standard names, that fullfil the spelling requirements but are not yet listed in the table, set `STRICT` to False:"
+    "Whenever a dataset is written and the parameter \"standard_name\" is set, it is verified against the standard name convention/table associated with the wrapper class. If the constant `STRICT` is set to True (default), the name is looked-up in the table and, if not found, the dataset cannot be written. To allow standard names, that fulfill the spelling requirements but are not yet listed in the table, set `STRICT` to False:"
    ]
   },
   {
