--- a/doc/gettingstarted/quickoverview.ipynb
+++ b/doc/gettingstarted/quickoverview.ipynb
@@ -42,7 +42,7 @@
    "source": [
     "## Create a HDF file\n",
     "\n",
-    "We recommend using python's context manager. If no filename is passed to the wrapper file, then a temporary file is created. This file is deleted when you python progam finishes/the kernel is stoped. Per default, the mode is `r+`"
+    "We recommend using python's context manager. If no filename is passed to the wrapper file, then a temporary file is created. This file is deleted when you python program finishes/the kernel is stopped. Per default, the mode is `r+`"
    ]
   },
   {
@@ -63,7 +63,7 @@
    "source": [
     "## Create a dataset\n",
     "\n",
-    "Assume we have a signal over time as numpy-arrays. We create two datasets for them. As signal is a function of time, we use HDF dimension scales (https://docs.h5py.org/en/stable/high/dims.html)  to make the relation ship:"
+    "Assume we have a signal over time as numpy-arrays. We create two datasets for them. As signal is a function of time, we use HDF dimension scales (https://docs.h5py.org/en/stable/high/dims.html)  to make the relationship:"
    ]
   },
   {
