--- a/doc/h5wrapper/GettingStarted.ipynb
+++ b/doc/h5wrapper/GettingStarted.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "There are multiple wrapper-classes implemented, each of which exteding functionality and introducing specific layout- and naming-convetions. The basic wrapper-class is called `H5File`. We will first demonstrate the functionalities and concepts around it before the more specialize wrapper classes are shown.\n",
     "\n",
-    "The wrapper classes extend but don't limit the funcitonality of the `h5py` package, so everything knwon from it is available also through this package. An HDF created, read or generally processed with `H5File` requires to respect certain conventions and prinicples. It is possible to ignore them but warnings will be raised. The following sections walk you through the concept and basic functionalities of the first warpper-class `H5File`:"
+    "The wrapper classes extend but don't limit the funcitonality of the `h5py` package, so everything knwon from it is available also through this package. An HDF file, which is created, read or generally processed with `H5File` requires to respect certain conventions and prinicples. It is possible to ignore them but warnings will be raised. The following sections walk you through the concept and basic functionalities of the first warpper-class `H5File`:"
    ]
   },
   {
@@ -70,7 +70,7 @@
    "metadata": {},
    "source": [
     "## Open a file\n",
-    "... and displaying (dumping) the content). An interactive html representation of the file content is displayed. At the moment only attributes at the root level exist. They were created when the file was opened in write mode. While `creation_time` and `modification_time` are treated as regular attributes `__h5rdmtoolbox_version__` and `__wrcls__`, thus attribus starting and ending with `__` are special attributes reserved/used by the package."
+    "... and displaying (dumping) the content). An interactive html representation of the file content is displayed. At the moment only attributes at the root level exist. They were created when the file was opened in write mode. While `creation_time` and `modification_time` are treated as regular attributes `__h5rdmtoolbox_version__` and `__wrcls__`, thus attributes starting and ending with `__` are special attributes reserved/used by the package."
    ]
   },
   {
@@ -163,9 +163,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Moreover, a certain **Layout** may be defined along with a wrapper class, e.g. `H5Flow` expecting one-dimensional `x`, `y` and `z` datasets with units `m` and `H5File` expects file to have a `title` as root attribute among other mandatory attributes. They may even be conditional layout restrictions that are considered based on specific user choices.\n",
+    "Moreover, a certain **Layout** may be defined along with a wrapper class, e.g. `H5Flow` expects one-dimensional `x`, `y` and `z` datasets with units `m`. The wrapper-class `H5File` expects a file to have a `title` as one of the root attributes among other mandatory attributes. There may even be conditional layout restrictions that are considered based on specific user choices.\n",
     "\n",
-    "Let's have a look, how the Layout file of `H5File` and `H5Flow` look like:"
+    "Let's have a look, how the layout file of `H5File` and `H5Flow` look like:"
    ]
   },
   {
@@ -245,7 +245,7 @@
     " - to have specific datasets\n",
     " - to have a specific dataset with a specific shape\n",
     "\n",
-    "The base Layout make no specification for datasets or groups except for the root group. It must have certain atributes, such as \"CREATION_TIME\" or \"title\". To check which one exactly, let's print the content of the file to the screen using `dump()` (outside of jupyter notebooks print the instance or call `sdump()`)"
+    "The basic wrapper-class reflects the \"minimum standard\". It must have certain atributes, such as \"creation_time \" or \"title\". To check which one exactly, let's print the content of the file to the screen using `dump()` (outside of jupyter notebooks print the instance or call `sdump()`)"
    ]
   },
   {
