--- a/doc/gettingstarted/quickoverview.ipynb
+++ b/doc/gettingstarted/quickoverview.ipynb
@@ -108,7 +108,7 @@
    "id": "e111e9e6-5f1b-4e7d-b9a6-17c20406adb7",
    "metadata": {},
    "source": [
-    "### Plot a data\n",
+    "## Plot a data\n",
     "Plotting data is simple as the return value of a sliced HDF dataset is a `xr.DataArray` which, thanks to the package `xarray`, provides a plotting function:"
    ]
   },
@@ -120,7 +120,28 @@
    "outputs": [],
    "source": [
     "with h5tbx.H5File(signal_filename, 'r') as h5:\n",
-    "    h5.signal[:].plot()  # you can use \"natural naming\" to access the signal dataset"
+    "    h5['signal'][:].plot()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1627e47a-37d1-45b2-8adc-d04d038b1574",
+   "metadata": {},
+   "source": [
+    "## Natural Naming\n",
+    "Until here we used the conventional way of addressing variables and groups in a dictionary-like style. `h5RDMtoolbox` llows to use \"natural naming\" which means that we can address those objects as if they were attributes:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a088543-0338-4022-a691-4108a95b1951",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with h5tbx.H5File(signal_filename, 'r') as h5:\n",
+    "    ds = h5.signal[:]\n",
+    "    grp = h5.mygroup"
    ]
   },
   {
@@ -128,7 +149,8 @@
    "id": "fdcc735d-8422-4710-a794-984a59580ad6",
    "metadata": {},
    "source": [
-    "## Inspect file content"
+    "## Inspect file content\n",
+    "Often it is necessary to recall the content of a file. Calling `dump()` on a group represents the content (dataset, groups and attributes) as a pretty nd interactive (!) html representation. This is adopted from the `xarray` package. All credits for this idea go there. The representation here avoids showing data, though. Outside an IPython environment call `sdump()` to get a string representation of the file."
    ]
   },
   {
@@ -139,7 +161,9 @@
    "outputs": [],
    "source": [
     "with h5tbx.H5File(signal_filename) as h5:\n",
-    "    h5.dump()"
+    "    h5.dump()\n",
+    "    print('+-----------------+\\n')\n",
+    "    h5.sdump()"
    ]
   },
   {
@@ -167,7 +191,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
