housekeeping and convention fixes

--- a/doc/h5wrapper/GettingStarted.ipynb
+++ b/doc/h5wrapper/GettingStarted.ipynb
@@ -225,7 +225,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with h5tbx.H5File.Layout.File as l:\n",
+    "with h5tbx.H5File.Layout as l:\n",
     "    print(l.attrs.keys())"
    ]
   },
