WIP refactor PIV

--- a/doc/x2hdf/piv2hdf/Introduction.ipynb
+++ b/doc/x2hdf/piv2hdf/Introduction.ipynb
@@ -6,12 +6,12 @@
    "metadata": {},
    "source": [
     "# Introduction\n",
-    "The coordinate system of a PIV recording has axis names `x`, `y` and `z`, where the laser sheet illuminates a `xy`-plane (respectively a `z`-plane). Additionally and generally, there are multiple recordings (snapshots) for a plane, thus a time vector `t` is needed.<br>\n",
+    "The coordinate system of a PIV recording has axis names `x`, `y` and `z`. The illuminated plane is the `xy`-plane. Thus, ich plane has a constant `z`-coordinate. As a PIV recording consists of multiple images over time, this information is stored in the time vector `t`.<br>\n",
     "\n",
-    "First we need to clarify what a `case`, a `plane` and a `snapshot` is exactly:\n",
-    "- A snapshot is a single recording (single nc-file)\n",
-    "- A planes represents a series of recordings (naphsots) which are in one physical (xy)-plane. Thus a plane is at a constant z-position. The next plane has a different z-position\n",
-    "- A case hosts multiple measurement planes.\n",
+    "Definition of a `snapshot`, a `plane` and a `case` is exactly:\n",
+    "- A `snapshot` represents an instantaneous PIV result, thus results from a single double-image recording.\n",
+    "- A `plane` represents a series of recordings (snaphsots) which are in one physical (xy)-plane.\n",
+    "- Multiple planes together are called a `case` or simply multi-plane.\n",
     "\n",
     "<img src=\"../introduction_piv_setup.png\" alt=\"Drawing\" style=\"height: 5cm;\"/>"
    ]
